#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-06-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999906 released.

        * Now checks sshd account priviliges every invocation.
          (for Windows 7 and global policies)

        * When gets sshd Stopped message, checks for orphans.

        * Updated Makefile.PL to ask for local sshd account.


2013-06-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999905 released.

        * New version to work with updated Term::Menus.


2013-05-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999904 released.

        * Misc. bug fixes for mirror().


2013-03-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999903 released.

        * Added lib libmpfr4 to install with Cygwin.


2013-02-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999902 released.

        * Another Fix for installation of mozrepl in Makefile.PL.


2013-02-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999901 released.

        * Another Fix for installation of mozrepl in Makefile.PL.


2013-02-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999 released.

        * Another Fix for installation of mozrepl in Makefile.PL.


2013-02-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999998 released.

        * Another Fix for installation of mozrepl in Makefile.PL.


2013-02-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999997 released.

        * Another Fix for installation of mozrepl in Makefile.PL.

