@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 3625b290ffc0187d7eda6ecab9bdf11115eecfd1 ChangeLog
+SHA1 e73b3dbfc5816d5834aa583e324bb2dea5203a8e ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 a1a7b1d7e8e590ec754abd86af20ca7c4a805905 META.yml
-SHA1 7ff310e33134382b218530a977637aba4a1ea1bf MYMETA.json
-SHA1 0ab833ffacd85eb7a2ac03d474ccb3b6e5fee88c MYMETA.yml
-SHA1 e0502870436c7d05cdd96b3ced51db67670326ea Makefile.PL
+SHA1 5ce3b76be8faecb4fd9e6e67e61272653ed08d4b META.yml
+SHA1 0154ee2279a28d2babb9590f85a6099a01b8d8f7 MYMETA.json
+SHA1 c92631d0e28c8a472f1dcf6df0b3f67681a4f450 MYMETA.yml
+SHA1 823563f522092628861ce481a61e9d427a37d982 Makefile.PL
 SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 6671adf9bf15b05200f2eb0ce2ac8b257a9e6050 bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 59edd7ab9ef5a7dfb4f4e2d84f46b232409cf51b lib/Net/FullAuto.pm
+SHA1 6682e66eccb6c69f6ee8b66f7c2022cee4cfd3a8 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -50,17 +50,17 @@ SHA1 652187d2e9b92347b5ce4622086b2314ad9962ee lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 35b0f57527b9813d39d63df1e3db84fdc13e9514 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 e0f261e25b722eb59848bcd0a9ee2936a6cc5d87 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 634f5cc1aa465f7172c2ea7af028ae0fbe35b44d lib/Net/FullAuto/FA_Core.pm
+SHA1 cf28b1306fdbd5e5d096056bea95b86b70f7beb1 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJRx3MzAAoJEBa/9Pad787EIr8IAI9mo7fl+X41CnVzY/V6IDqj
-d7qzF3kwhgh0GBQ57EPl74qXwqVz+xD6A/81n2CzS8YDUKdH9ZH8QuNFIVzTFXxL
-xo1yNFPmomf/uF4CZcdk+xkuKGGzM4c/BIOux0r97dobdi17eOwzk7/odP75k6Wa
-ru3Nv97Y4u2QihdbT5iD6FiKzCzRsAmvsqIPAFi44Vm1hjPsgT0nOTNeivBV5IoD
-mR6vtajChX8LkOKK4JZDmBuO/sTmsjIWUmjZycTK4IWNRjWkpJE7UIYcNpg+sKna
-xiPL0ASNEysdztgg840Bzw18SN7oCfYCkowLV2PRK7ojtwWWjKsrE3cU8q8bSRI=
-=qMxA
+iQEcBAEBAgAGBQJRyvLSAAoJEBa/9Pad787EjqEH/jELv5OdaRPpZx9XIXh48i8y
+Qymzov79D3bjj7Q9fS3mrKRgveS1E2kDY1PGoUra5RqolLwieES8zmNAJx5vTUte
+UyC8LWjtiQeGCjbFoZ8XcAb8VxVfBVLGfmjoNdBc8dcK1x+DSz0YceS7wvkKQiwk
+ZuI9kL2TLFL21g5tAxmxFEckZ4Ol75e5LqWgOWY87rvbLGV0x2L8EknGyUwHKmTn
++b+oUfAp97c6LAJOYVg+0Z1tyNtsGsKi/T3VrcUR8WeIJY1tK74fOSI1L+Ol6GxV
+KPkiJtksFdebI/o3NpYbpBSSaPTgfRFDLs6gwTzGUe2mSk419GPeNtxDQYoqe1s=
+=6Bc5
 -----END PGP SIGNATURE-----
