@@ -19,6 +19,14 @@
 ################################################################
 
 
+2013-06-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.99999907 released.
+
+        * Now work on needed privilige error messages.
+          (for Windows 7 and global policies)
+
+
 2013-06-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.99999906 released.
